--- a/yueshipin/res/layout/mianze_dialog.xml
+++ b/yueshipin/res/layout/mianze_dialog.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#000000"
+    android:background="#47484B"
     android:gravity="center"
     android:orientation="vertical" >
 
