--- a/yueshipin/res/layout/detail_show.xml
+++ b/yueshipin/res/layout/detail_show.xml
@@ -43,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:paddingLeft="16dp"
             android:gravity="center"
             android:onClick="OnClickTab1TopLeft" >
 
@@ -75,6 +76,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center"
+            android:paddingRight="16dp"
             android:onClick="OnClickTab1TopRight"
             android:orientation="horizontal" >
 
