--- a/yueshipin/res/layout/main_top_right_dialog.xml
+++ b/yueshipin/res/layout/main_top_right_dialog.xml
@@ -71,7 +71,7 @@
     			       android:layout_width="match_parent"
     			       android:layout_height="wrap_content"
     			       android:background="@drawable/shape"
-    			       android:onClick="OnClickFriendsCircle"
+    			       android:onClick="OnClickFriendsSocial"
     			       android:text="微信朋友圈"/> 		    
     		</LinearLayout>
     		
