--- a/yueshipin/res/layout/videoview.xml
+++ b/yueshipin/res/layout/videoview.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" 
-    android:background="@color/black">
+    android:background="@color/black"
+    android:id="@+id/layout">
 
     <io.vov.vitamio.widget.VideoView
         android:id="@+id/surface_view"
