--- a/yueshipin/res/layout/setting.xml
+++ b/yueshipin/res/layout/setting.xml
@@ -146,6 +146,17 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/setting_button_aboutus"
                     android:onClick="OnClickAboutUs" />
+                
+                  <ImageButton
+                    android:id="@+id/button7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="11dp"
+                    android:layout_marginRight="11dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/setting_button_tj"
+                    android:onClick="OnClickRecommend"
+                    android:visibility="visible" />
             </LinearLayout>
 
             <TextView
@@ -172,19 +183,6 @@
                     android:listSelector="#00000000"
                     android:focusable="false" >
                 </com.joyplus.widget.InnerListView>
-
-                <!--
-                ListView
-                    android:id="@+id/list"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#00000000"
-                    android:cacheColorHint="#00000000"
-                    android:divider="#dedfde"
-                    android:dividerHeight="1px"
-                    android:listSelector="#00000000" >
-                </ListView>
-                -->
 
             </RelativeLayout>
         </LinearLayout>
