--- a/yueshipin/res/layout/mediacontroller.xml
+++ b/yueshipin/res/layout/mediacontroller.xml
@@ -20,7 +20,7 @@
             android:text="热血高校热血高校热血高校"
             android:ellipsize="end"
             android:singleLine="true"
-            android:maxEms = "9"
+            android:maxEms = "6"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white" />
 
@@ -40,13 +40,13 @@
                 android:textColor="@color/white"
                 android:layout_toRightOf="@id/imageButton1"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="15dp"
                 />
             <ImageView android:id="@+id/videosource_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="70dp"
+                android:layout_height="22dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="2dp"
                 android:layout_toRightOf="@id/videosource_tv"
                 android:fadingEdge="none"
                 />
