--- a/yueshipin/res/layout/mediacontroller.xml
+++ b/yueshipin/res/layout/mediacontroller.xml
@@ -44,8 +44,7 @@
                 />
             <ImageView android:id="@+id/videosource_img"
                 android:layout_width="wrap_content"
-                android:maxWidth="60dp"
-                android:layout_height="22dp"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="2dp"
                 android:layout_toRightOf="@id/videosource_tv"
