--- a/yueshipin/res/layout/mediacontroller_720.xml
+++ b/yueshipin/res/layout/mediacontroller_720.xml
@@ -42,8 +42,7 @@
                 />
             <ImageView android:id="@+id/videosource_img"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:maxWidth="80dp"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="2dp"
                 android:layout_toRightOf="@id/videosource_tv"
