--- a/yueshipin/res/layout/mediacontroller_720.xml
+++ b/yueshipin/res/layout/mediacontroller_720.xml
@@ -39,7 +39,7 @@
                 android:layout_toRightOf="@id/imageButton1"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
-                />
+                android:visibility="gone"/>
             <ImageView android:id="@+id/videosource_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
