--- a/yueshipin/res/layout/mediacontroller.xml
+++ b/yueshipin/res/layout/mediacontroller.xml
@@ -38,9 +38,10 @@
                 android:layout_height="wrap_content"
                 android:text="视频来源："
                 android:textColor="@color/white"
+                android:textSize="15sp"
                 android:layout_toRightOf="@id/imageButton1"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="13dp"
                 android:visibility="gone"/>
             <ImageView android:id="@+id/videosource_img"
                 android:layout_width="wrap_content"
