--- a/yueshipin/res/values/umeng_xp_style.xml
+++ b/yueshipin/res/values/umeng_xp_style.xml
@@ -6,7 +6,7 @@
         <item name="android:orientation">vertical</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:background">@drawable/umeng_xp_btn_gradient_grey</item>
         <item name="android:layout_marginRight">5dp</item>
