--- a/yueshipin/res/layout/detail_movie.xml
+++ b/yueshipin/res/layout/detail_movie.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#F2F2F2" >
+    android:background="#F2F2F2"
+    android:id="@+id/parent" >
 
     <LinearLayout
         android:id="@+id/none_net"
@@ -74,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:paddingRight="16dp"
+            android:paddingRight="6dp"
             android:gravity="center"
             android:onClick="OnClickTab1TopRight"
             android:orientation="horizontal" >
