--- a/yueshipin/res/layout/video_cache.xml
+++ b/yueshipin/res/layout/video_cache.xml
@@ -12,7 +12,7 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/title_background" >
 
-        <LinearLayout
+        <!-- LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="0.37"
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/top_icon_return" />
-        </LinearLayout>
+        </LinearLayout> -->
 
         <LinearLayout
             android:layout_width="wrap_content"
